# arionkoder-tech-challenge

./: Cargo.toml  README.md  message.json  messages.txt
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
task__1/: Cargo.toml  README.md  messages.txt
task__1/src/: main.rs
task__2/: .env  .gitignore  Cargo.toml  Dockerfile-pg-dev  README.md  docker-compose.yml
task__2/src/: main.rs
task__3/: Cargo.toml  README.md
task__3/src/: main.rs
task__4/: Cargo.toml  README.md
task__4/src/: main.rs
task__5/: Cargo.toml  README.md
task__5/src/: main.rs
