[package]
name = "task__2"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.13"
deadpool-postgres = { version = "0.12", features = ["serde"] }
dotenvy = "0.15"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-postgres = "0.7.6"
uuid = { version = "1", features = ["v4"] }
